src/lib/syntax/parser/snapshots/catlang__syntax__parser__module__tests__export_statement.snap
---
source: src/lib/syntax/parser/module.rs
expression: res
---
(7:9) Statement(
    ExportStatement {
        identifier: (7:9) "PI",
        renamed_to: None,
    },
)
