src/lib/syntax/parser/snapshots/catlang__syntax__parser__module__tests__glob_import.snap
---
source: src/lib/syntax/parser/module.rs
expression: res
---
(7:36) Import {
    import_list: GlobImportList(
        GlobImportList {
            identifier: (12:19) "vectors",
        },
    ),
    path: (25:36) "\"./vectors\"",
}
