src/lib/syntax/parser/snapshots/catlang__syntax__parser__module__tests__glob_re_export.snap
---
source: src/lib/syntax/parser/module.rs
expression: res
---
(7:34) ReExport(
    ExportReExport {
        exports: GlobImportList(
            GlobImportList {
                identifier: (12:19) "vectors",
            },
        ),
        path: (25:34) "\"vectors\"",
    },
)
