src/lib/syntax/parser/snapshots/catlang__syntax__parser__module__tests__renamed_export_statement.snap
---
source: src/lib/syntax/parser/module.rs
expression: res
---
(7:21) Statement(
    ExportStatement {
        identifier: (7:15) "PI_CONST",
        renamed_to: Some(
            (19:21) "PI",
        ),
    },
)
